# video-dl

./: .gitignore  .readthedocs.yml  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  pytest.ini  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: index.md
docs/api/: downloader.md  processor.md  subtitle.md
docs/contributing/: code-style.md  development.md  testing.md
docs/guides/: advanced-usage.md  configuration.md  installation.md  quickstart.md
src/video_dl/cli/: download.py  subtitle.py
src/video_dl/config/: settings.py
src/video_dl/core/: downloader.py  processor.py  subtitle.py
src/video_dl/exceptions/: errors.py
src/video_dl/logging/: logger.py
src/video_dl/models/: config.py  video.py
src/video_dl/utils/: ffmpeg.py  filesystem.py  validation.py
tests/: conftest.py  test_cli.py  test_config.py  test_downloader.py  test_integration.py  test_performance.py  test_processor.py  test_subtitle.py  test_utils.py
