# pyproject.toml
[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "video-dl"
dynamic = ["version"]
description = "Advanced video and subtitle downloader"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Brett Yang", email = "hello@brettyang.au"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "yt-dlp>=2023.11.16",
    "ffmpeg-python>=0.2.0",
    "pysrt>=1.1.2",
    "webvtt-py>=0.4.6",
    "chardet>=4.0.0",
    "schedule>=1.1.0",
    "tqdm>=4.65.0",
    "requests>=2.28.0",
    "click>=8.0.0"
]

[project.optional-dependencies]
dev = [
    "black>=23.1.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "pytest>=7.3.1",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "responses>=0.23.1"
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.7.0",
    "pymdown-extensions>=10.0",
]

[project.scripts]
video-dl = "video_dl.cli.download:main"
subtitle-dl = "video_dl.cli.subtitle:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools_scm]
write_to = "src/video_dl/_version.py"